<resources>
    <string name="app_name">LiezhComponent</string>

    <string name="action_settings">Settings</string>
    <string name="index_title">所有记录</string>
    <string name="letf_menu_item1">所有笔记</string>
    <string name="letf_menu_item2">笔记本</string>
    <string name="letf_menu_item3">回收站</string>
    <string name="letf_menu_item4">云同步</string>
    <string name="letf_menu_item5">主题</string>
    <string name="title_activity_note_book">NoteBookActivity</string>
    <string name="title_activity_recovery">RecoveryActivity</string>
    <string name="title_activity_cloud">CloudActivity</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="title_activity_note_book_catalog">NoteBookCatalogActivity</string>
</resources>
